--- a/transaction.properties
+++ b/transaction.properties
@@ -1,2 +1,3 @@
-server.port=8005
+#I can use 8005 port because it's currectly in use
+server.port=8006
 spring.data.mongodb.uri=mongodb://localhost:27017/TRANSACTION
