--- a/bankSavingAccount.properties
+++ b/bankSavingAccount.properties
@@ -1,2 +1,3 @@
 server.port=8004
+euroka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.data.mongodb.uri=mongodb://localhost:27017/BANK_SAVING_ACCOUNT
