--- a/zuulServer.properties
+++ b/zuulServer.properties
@@ -1,3 +1,11 @@
 server.port=8020
 euroka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
+zuul.routes.bankaccount.service-id=bankAccount
+zuul.routes.bankaccount.path=/api/**
+
+zuul.routes.bankaccount.service-id=bankSavingAccount
+zuul.routes.banksavingaccount.path=/api/**
+
+zuul.routes.personalclient.service-id=personalClient
+zuul.routes.personalclient.path=/api/**
