--- a/zuulServer.properties
+++ b/zuulServer.properties
@@ -2,10 +2,10 @@ server.port=8020
 euroka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 zuul.routes.bankaccount.service-id=bankAccount
-zuul.routes.bankaccount.path=/api/**
+zuul.routes.bankaccount.path=/api/ba/**
 
 zuul.routes.bankaccount.service-id=bankSavingAccount
-zuul.routes.banksavingaccount.path=/api/**
+zuul.routes.banksavingaccount.path=/api/bsa/**
 
 zuul.routes.personalclient.service-id=personalClient
-zuul.routes.personalclient.path=/api/**
+zuul.routes.personalclient.path=/api/pc/**
