--- a/zuulServer.properties
+++ b/zuulServer.properties
@@ -1,11 +1,16 @@
 server.port=8020
 euroka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
+#ZuulServer
+spring.application.name=zuulServer
+spring.cloud.config.uri=http://localhost:8001
+
 zuul.routes.bankaccount.service-id=bankAccount
 zuul.routes.bankaccount.path=/api/ba/**
 
-zuul.routes.bankaccount.service-id=bankSavingAccount
+zuul.routes.banksavingaccount.service-id=bankSavingAccount
 zuul.routes.banksavingaccount.path=/api/bsa/**
 
 zuul.routes.personalclient.service-id=personalClient
 zuul.routes.personalclient.path=/api/pc/**
+
