--- a/bankSavingAccount.properties
+++ b/bankSavingAccount.properties
@@ -1,3 +1,7 @@
 server.port=8004
 euroka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.data.mongodb.uri=mongodb://localhost:27017/BANK_SAVING_ACCOUNT
+
+#hystrix.command.default.execution.isoletion.thread.timeoutInMilliseconds: 20000
+#ribbon.ConnectTimeout: 3000
+#ribbon.ReadTimeout: 10000
