--- a/zuulServer.properties
+++ b/zuulServer.properties
@@ -1,7 +1,7 @@
 server.port=8020
 euroka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
-#ZuulServer
+ZuulServer
 spring.application.name=zuulServer
 spring.cloud.config.uri=http://localhost:8001
 
@@ -13,4 +13,7 @@ zuul.routes.banksavingaccount.path=/api/bsa/**
 
 zuul.routes.personalclient.service-id=personalClient
 zuul.routes.personalclient.path=/api/pc/**
+
+zuul.routes.transaction.service-id=transaction
+zuul.routes.transaction.path=/api/t/**
 
