--- a/transaction.properties
+++ b/transaction.properties
@@ -1,3 +1,4 @@
 #I can't use 8005 port because it's currectly in use
 server.port=8006
+euroka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.data.mongodb.uri=mongodb://localhost:27017/TRANSACTION
