--- a/personalClient.properties
+++ b/personalClient.properties
@@ -1,1 +1,3 @@
 server.port=8002
+euroka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.data.mongodb.uri=mongodb://localhost:27017/PERSONAL_CLIENT
