--- a/bankAccount.properties
+++ b/bankAccount.properties
@@ -1,3 +1,3 @@
 server.port=8007
-euroka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.data.mongodb.uri=mongodb://localhost:27017/BANK_ACCOUNT
