--- a/zuulServer.properties
+++ b/zuulServer.properties
@@ -1,7 +1,7 @@
 server.port=8020
-euroka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
-ZuulServer
+#ZuulServer
 spring.application.name=zuulServer
 spring.cloud.config.uri=http://localhost:8001
 
