--- a/zuulServer.properties
+++ b/zuulServer.properties
@@ -6,14 +6,35 @@ spring.application.name=zuulServer
 spring.cloud.config.uri=http://localhost:8001
 
 zuul.routes.bankaccount.service-id=bankAccount
-zuul.routes.bankaccount.path=/api/ba/**
+zuul.routes.bankaccount.path=/api/bankAcount/**
+
+zuul.routes.bankcheckingaccount.service-id=bankCheckingAccount
+zuul.routes.bankcheckingaccount.path=/api/bankCheckingAccount/**
+
+zuul.routes.bankfixedtermaccountvip.service-id=bankFixedTermAccountVip
+zuul.routes.bankfixedtermaccountvip.path=/api/bankFixedTermAccountVip/**
 
 zuul.routes.banksavingaccount.service-id=bankSavingAccount
-zuul.routes.banksavingaccount.path=/api/bsa/**
+zuul.routes.banksavingaccount.path=/api/bankSavingAccount/**
+
+zuul.routes.businessclient.service-id=businessClient
+zuul.routes.businessclient.path=/api/businessClient/**
+
+zuul.routes.creditcard.service-id=creditCard
+zuul.routes.creditcard.path=/api/creditCard/**
+
+zuul.routes.extensivepay.service-id=extensivePay
+zuul.routes.extensivepay.path=/api/extensivePay/**
+
+zuul.routes.payandconsume.service-id=payAndConsume
+zuul.routes.payandconsume.path=/api/payAndConsume/**
 
 zuul.routes.personalclient.service-id=personalClient
-zuul.routes.personalclient.path=/api/pc/**
+zuul.routes.personalclient.path=/api/personalClient/**
 
 zuul.routes.transaction.service-id=transaction
-zuul.routes.transaction.path=/api/t/**
+zuul.routes.transaction.path=/api/transaction/**
+
+zuul.routes.transactionvip.service-id=transactionVip
+zuul.routes.transactionvip.path=/api/transactionVip/**
 
