--- a/zuulServer.properties
+++ b/zuulServer.properties
@@ -5,6 +5,9 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.application.name=zuulServer
 spring.cloud.config.uri=http://localhost:8001
 
+zuul.routes.bankaccountmain.service-id=bankAccountMain
+zuul.routes.bankaccountmain.path=/api/bankAcountMain/**
+
 zuul.routes.bankaccount.service-id=bankAccount
 zuul.routes.bankaccount.path=/api/bankAcount/**
 
