--- a/zuulServer.properties
+++ b/zuulServer.properties
@@ -9,7 +9,7 @@ zuul.routes.bankaccountmain.service-id=bankAccountMain
 zuul.routes.bankaccountmain.path=/api/bankAccountMain/**
 
 zuul.routes.bankaccount.service-id=bankAccount
-zuul.routes.bankaccount.path=/api/bankAcount/**
+zuul.routes.bankaccount.path=/api/bankAccount/**
 
 zuul.routes.bankcheckingaccount.service-id=bankCheckingAccount
 zuul.routes.bankcheckingaccount.path=/api/bankCheckingAccount/**
