updating zuulServer.properties

--- a/zuulServer.properties
+++ b/zuulServer.properties
@@ -41,3 +41,6 @@ zuul.routes.transaction.path=/api/transaction/**
 zuul.routes.transactionvip.service-id=transactionVip
 zuul.routes.transactionvip.path=/api/transactionVip/**
 
+zuul.routes.report.service-id=report
+zuul.routes.report.path=/api/report/**
+
