changing to docker-compose

--- a/transactionVip.properties
+++ b/transactionVip.properties
@@ -1,3 +1,6 @@
 server.port=8011
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-spring.data.mongodb.uri=mongodb://localhost:27017/TRANSACTION_VIP
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#spring.data.mongodb.uri=mongodb://localhost:27017/TRANSACTION_VIP
+
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
+spring.data.mongodb.uri=mongodb://microservice-mongo:27017/TRANSACTION_VIP
