--- a/bankAccountMain.properties
+++ b/bankAccountMain.properties
@@ -1,6 +1,6 @@
 server.port=8013
-#eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
-#spring.data.mongodb.uri=mongodb://microservice-mongo:27017/BANK_ACCOUNT_MAIN
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
+spring.data.mongodb.uri=mongodb://microservice-mongo:27017/BANK_ACCOUNT_MAIN
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-spring.data.mongodb.uri=mongodb://localhost:27017/BANK_ACCOUNT_MAIN
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#spring.data.mongodb.uri=mongodb://localhost:27017/BANK_ACCOUNT_MAIN
