--- a/bankFixedTermAccountVip.properties
+++ b/bankFixedTermAccountVip.properties
@@ -1,7 +1,7 @@
 server.port=8010
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-spring.data.mongodb.uri=mongodb://localhost:27017/BANK_FIXED_TERM_ACCOUNT_VIP
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#spring.data.mongodb.uri=mongodb://localhost:27017/BANK_FIXED_TERM_ACCOUNT_VIP
 
-#eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
-#spring.data.mongodb.uri=mongodb://microservice-mongo:27017/BANK_FIXED_TERM_ACCOUNT_VIP
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
+spring.data.mongodb.uri=mongodb://microservice-mongo:27017/BANK_FIXED_TERM_ACCOUNT_VIP
 
