--- a/zuulServer.properties
+++ b/zuulServer.properties
@@ -1,10 +1,10 @@
 server.port=8020
-#eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 #ZuulServer
 spring.application.name=zuulServer
-#spring.cloud.config.uri=http://config-server:8001
-spring.cloud.config.uri=http://localhost:8001
+spring.cloud.config.uri=http://config-server:8001
+#spring.cloud.config.uri=http://localhost:8001
 
 zuul.routes.bankaccountmain.service-id=bankAccountMain
 zuul.routes.bankaccountmain.path=/api/bankAccountMain/**
