--- a/bankFixedTermAccountVip.properties
+++ b/bankFixedTermAccountVip.properties
@@ -5,3 +5,5 @@ spring.data.mongodb.uri=mongodb://localhost:27017/BANK_FIXED_TERM_ACCOUNT_VIP
 #eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
 #spring.data.mongodb.uri=mongodb://microservice-mongo:27017/BANK_FIXED_TERM_ACCOUNT_VIP
 
+config.base.webclient.bankaccountmain=http://localhost:8020/api/bankAccountMain
+
