--- a/bankFixedTermAccountVip.properties
+++ b/bankFixedTermAccountVip.properties
@@ -1,9 +1,17 @@
 server.port=8010
+
+#spring.cloud.config.uri=http://config-server:8001
+spring.cloud.config.uri=http://localhost:8001
+
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.data.mongodb.uri=mongodb://localhost:27017/BANK_FIXED_TERM_ACCOUNT_VIP
 
 #eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
 #spring.data.mongodb.uri=mongodb://microservice-mongo:27017/BANK_FIXED_TERM_ACCOUNT_VIP
+
+hystrix.comand.default.execution.isolation.thread.timeoutInMilliseconds: 13000
+ribbon.ConnectTimeout: 3000
+ribbon.ReadTimeout: 10000
 
 config.base.webclient.bankaccountmain=http://localhost:8020/api/bankAccountMain
 
