adding in zuul.properties atm route

--- a/zuulServer.properties
+++ b/zuulServer.properties
@@ -45,3 +45,6 @@ zuul.routes.transactionvip.path=/api/transactionVip/**
 zuul.routes.report.service-id=report
 zuul.routes.report.path=/api/report/**
 
+zuul.routes.atm.service-id=atm
+zuul.routes.atm.path=/api/atm/**
+
