--- a/bankFixedTermAccountVip.properties
+++ b/bankFixedTermAccountVip.properties
@@ -1,6 +1,7 @@
 server.port=8010
 
 config.base.webclient.bankaccountmain=http://localhost:8020/api/bankAccountMain
+config.base.webclient.creditcard=http://localhost:8020/api/creditCard
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.data.mongodb.uri=mongodb://localhost:27017/BANK_FIXED_TERM_ACCOUNT_VIP
