--- a/bankFixedTermAccountVip.properties
+++ b/bankFixedTermAccountVip.properties
@@ -1,13 +1,14 @@
 server.port=8010
 
-config.base.webclient.bankaccountmain=http://localhost:8020/api/bankAccountMain
-config.base.webclient.creditcard=http://localhost:8020/api/creditCard
+#config.base.webclient.bankaccountmain=http://localhost:8020/api/bankAccountMain
+config.base.webclient.bankaccountmain=http://zuul-server:8020/api/bankAccountMain
+#config.base.webclient.creditcard=http://localhost:8020/api/creditCard
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-spring.data.mongodb.uri=mongodb://localhost:27017/BANK_FIXED_TERM_ACCOUNT_VIP
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#spring.data.mongodb.uri=mongodb://localhost:27017/BANK_FIXED_TERM_ACCOUNT_VIP
 
-#eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
-#spring.data.mongodb.uri=mongodb://microservice-mongo:27017/BANK_FIXED_TERM_ACCOUNT_VIP
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8761/eureka
+spring.data.mongodb.uri=mongodb://microservice-mongo:27017/BANK_FIXED_TERM_ACCOUNT_VIP
 
 hystrix.comand.default.execution.isolation.thread.timeoutInMilliseconds: 13000
 ribbon.ConnectTimeout: 3000
